lustre/osd-ldiskfs/osd_internal.h
@@ -812,10 +812,11 @@ loff_t find_tree_dqentry(const struct lu_env *env,
 /* osd_quota.c */
 int osd_declare_qid(const struct lu_env *env, struct osd_thandle *oh,
 		    struct lquota_id_info *qi, struct osd_object *obj,
-		    bool enforce, int *flags);
+		    bool enforce, enum osd_quota_local_flags *local_flags);
 int osd_declare_inode_qid(const struct lu_env *env, qid_t uid, qid_t gid,
 			  __u32 projid, long long space, struct osd_thandle *oh,
-			  struct osd_object *obj, int *flags,
+			  struct osd_object *obj,
+			  enum osd_quota_local_flags *local_flags,
 			  enum osd_qid_declare_flags);
 const struct dt_rec *osd_quota_pack(struct osd_object *obj,
 				    const struct dt_rec *rec,
